<resources>
    <string name="app_name">HacktoberFest</string>

    <!-- TODO: Remove or change this placeholder text -->
	<string name="qr_scanner">QR Scanner</string>
	<string name="logout">Logout</string>
	<string name="settings">Settings</string>
	<string name="apicaller">ApiCaller</string>
	<string name="submit">Submit</string>
	<string name="email">Email</string>
	<string name="password">Password</string>
	<string name="name">Name</string>
	<string name="already_registered_sign_in">Already Registered? Sign in</string>
	<string name="registration">Registration</string>
	<string name="login">Login</string>
	<string name="new_user_sign_up">New User? Sign Up</string>
	<string name="welcome">Welcome</string>
	<string name="forgot_password">Forgot Password?</string>
	<string name="password_reset">Password Reset</string>
	<string name="please_enter_your_registered_email_id">Please Enter Your Registered Email ID</string>
</resources>
