<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@drawable/b4"
	tools:context=".registration">

	<Button
		android:id="@+id/busubmit"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="68dp"
		android:background="@drawable/ui1"
		android:onClick="submit"
		android:text="@string/submit"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.498"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/etrpassword" />

	<EditText
		android:id="@+id/etremail"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="64dp"
		android:background="@drawable/ui2"
		android:ems="10"
		android:hint="@string/email"
		android:inputType="textEmailAddress"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/etrname" />

	<EditText
		android:id="@+id/etrpassword"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="72dp"
		android:background="@drawable/ui2"
		android:ems="10"
		android:hint="@string/password"
		android:inputType="textPassword"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/etremail" />

	<EditText
		android:id="@+id/etrname"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="8dp"
		android:layout_marginLeft="8dp"
		android:layout_marginTop="100dp"
		android:layout_marginEnd="8dp"
		android:layout_marginRight="8dp"
		android:background="@drawable/ui2"
		android:ems="10"
		android:hint="@string/name"
		android:inputType="textPersonName"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

	<TextView
		android:id="@+id/return1"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="44dp"
		android:clickable="false"
		android:fontFamily="@font/akronim"
		android:onClick="bu2"
		android:text="@string/already_registered_sign_in"
		android:textAllCaps="false"
		android:textColor="@color/colorPrimary"
		android:textSize="20sp"
		android:textStyle="bold"
		android:typeface="normal"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/busubmit" />

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="8dp"
		android:layout_marginBottom="8dp"
		android:fontFamily="@font/leckerli_one"
		android:shadowColor="@color/common_google_signin_btn_text_dark_focused"
		android:text="@string/registration"
		android:textColor="@color/colorPrimary"
		android:textColorHighlight="@color/colorPrimary"
		android:textColorLink="@color/common_google_signin_btn_text_dark_default"
		android:textSize="46sp"
		app:layout_constraintBottom_toTopOf="@+id/etrname"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.542"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>