<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@drawable/b1"
	tools:context=".MainActivity">

	<Button
		android:id="@+id/lbutton"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="72dp"
		android:background="@drawable/loginregisbuttonstyle"
		android:onClick="buclick"
		android:text="@string/login"
		android:textColor="@color/common_google_signin_btn_text_dark_default"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.498"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/etlpassword" />

	<EditText
		android:id="@+id/etlpassword"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="8dp"
		android:layout_marginLeft="8dp"
		android:layout_marginTop="48dp"
		android:layout_marginEnd="8dp"
		android:layout_marginRight="8dp"
		android:background="@drawable/ui1"
		android:ems="10"
		android:hint="@string/password"
		android:inputType="textPassword"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/etlname" />

	<EditText
		android:id="@+id/etlname"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="8dp"
		android:layout_marginLeft="8dp"
		android:layout_marginTop="176dp"
		android:layout_marginEnd="8dp"
		android:layout_marginRight="8dp"
		android:background="@drawable/ui1"
		android:ems="10"
		android:hint="@string/email"
		android:inputType="textPersonName"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

	<ImageView
		android:layout_width="109dp"
		android:layout_height="85dp"
		android:layout_marginTop="4dp"
		android:layout_marginBottom="8dp"
		app:layout_constraintBottom_toTopOf="@+id/etlname"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintVertical_bias="0.151"
		app:srcCompat="@drawable/nira" />

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="73dp"
		android:layout_marginTop="56dp"
		android:layout_marginBottom="8dp"
		android:fontFamily="@font/leckerli_one"
		android:text="@string/welcome"
		android:textColor="@color/colorAccent"
		android:textSize="48sp"
		app:layout_constraintBottom_toTopOf="@+id/etlname"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintVertical_bias="1.0" />

	<TextView
		android:id="@+id/lregister"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="60dp"
		android:fontFamily="@font/aladin"
		android:onClick="bu4"
		android:text="@string/new_user_sign_up"
		android:textColor="@color/colorPrimaryDark"
		android:textSize="20sp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/lbutton" />

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="16dp"
		android:fontFamily="@font/aladin"
		android:onClick="forgot"
		android:text="@string/forgot_password"
		android:textColor="@color/colorPrimaryDark"
		android:textSize="20sp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/lregister" />

</android.support.constraint.ConstraintLayout>