<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@drawable/b4"
	tools:context=".forgotpass">

	<Button
		android:id="@+id/bu5"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="8dp"
		android:layout_marginBottom="8dp"
		android:background="@drawable/ui2"
		android:onClick="forgotPass"
		android:text="Submit"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.498"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/forem"
		app:layout_constraintVertical_bias="0.626" />

	<EditText
		android:id="@+id/forem"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="144dp"
		android:background="@drawable/ui1"
		android:ems="10"
		android:hint="@string/email"
		android:inputType="textPersonName"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.52"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

	<TextView
		android:id="@+id/textView4"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="28dp"
		android:fontFamily="@font/leckerli_one"
		android:text="@string/password_reset"
		android:textColor="@android:color/holo_orange_dark"
		android:textSize="32sp"
		android:textStyle="bold|italic"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.497"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="8dp"
		android:layout_marginBottom="8dp"
		android:fontFamily="@font/aclonica"
		android:text="@string/please_enter_your_registered_email_id"
		android:textStyle="italic"
		app:layout_constraintBottom_toTopOf="@+id/forem"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/textView4" />

</android.support.constraint.ConstraintLayout>